<resources>
    <string name="app_name">RestoApp</string>

    //Strings comunes
    <string name="unirme">Unirme</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>

    //Main Activity
    <string name="crea_cuenta">Crea una cuenta</string>
    <string name="registrate">Registrate y únete a restoapp</string>
    <string name="ya_tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="repita_contrasena">Repita contraseña</string>


    //Login Activity
    <string name="ingresa_a_tu_cuenta">Ingresa a tu cuenta</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="registrar">Registrar</string>

    //SplashActivity
    <string name="titulo_restoapp">RESTOAPP</string>
    <string name="logo_empresa">Logo de la empresa</string>

    //OnBoarding Activity
    <string name="habla_con_nos">Habla directamente con los restaurantes</string>
    <string name="restoapp_todo_listo">Con RestoApp puedes tener todo listo para esa ocasión especial</string>

    //MisReservas Activity
    <string name="title">Mis Reservas</string>
    <string name="subtitle">Revisa tus reservas vigentes y pasadas</string>
    <string name="btn_add_reservation">+</string>

    //Dialog Agregar Reserva
    <string name="confirm_button">Confirmar</string>
    <string name="btn_close">x</string>
    <string name="title_create_reservation">Reservar</string>
    <string name="choose_date">Elegir fecha y hora</string>
    <string name="number_of_people">Cantidad de personas</string>
    <string name="type_of_reservation">Tipo de reserva</string>
    <string name="select_table">Seleccionar mesa</string>
    <string name="reservation_comment">Escribe alguna observación...</string>

    <string-array name="type_of_reservations">
        <item>Cita</item>
        <item>Cumpleaños</item>
        <item>Negocios</item>
        <item>Familiar</item>
        <item>Otro</item>

        <!-- Agrega más opciones según sea necesario -->
    </string-array>


    //PERFIL
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actualizar">Actualizar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="avatar_usuario">Avatar del Usuario</string>
    <string name="actualiza_info_perfil">Actualiza la información de tu perfil</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="dni_ejemplo">DNI 32349485</string>
    <string name="correo_ejemplo">Ejemplo1234@gmail.com</string>
    <string name="boton_para_reservar">boton para reservar</string>
    <string name="categorias">Categorias</string>
    <string name="explora">Explora</string>
    <string name="boton_para_busqueda">boton para busqueda</string>
    <string name="boton_para_contactos">Boton para contactos</string>
    <string name="saludo">Hola Nacho !</string>
    <string name="encuentra_platos_fav">"Encuentra tus platos favoritos "</string>
    <string name="contrasenia">Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="volver">volver a la pantalla anterior</string>
    <string name="avatar_eleccion">avatar para seleccionar</string>
    <string name="selecciona_foto">Seleccciona una foto de tu dispositivo</string>
    <string name="img_seleccionada">Imagen seleccionada</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="abrir_facebook">Abrir Facebook</string>
    <string name="abrir_instagram">Abrir Instagram</string>
    <string name="abrir_whatsApp">Abrir WhatsApp</string>
    <string name="seleccionar_archivo">Seleccionar Archivo</string>
    <string name="tu_comentario">Tu comentario puede ayudarnos...</string>
    <string name="abrir_in">Abrir in</string>
    <string name="abrir_visa">Abrir visa</string>
    <string name="abrir_mercadopago">Abrir Mercadopago</string>
    <string name="abrir_master">Abrir Master</string>
    <string name="contacto">Contacto</string>
    <string name="dejar_comentario">Dejar comentario</string>
    <string name="medios_pago">Medios de pago</string>
    <string name="hola_bienvenido">Hola Bienvenido !!</string>
    <string name="no_tienes_reservas">Nada por aquí todavía. ¿Te gustaría agregar una reserva</string>
    <string name="elimina_reserva">Eliminar tu reserva</string>
    <string name="id">Id:</string>

</resources>