<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8BABA"
    android:backgroundTint="#DFDCDC"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PerfilFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/libre_baskerville_bold"
        android:text="@string/mi_perfil"
        android:textColor="#2C2C2C"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualiza_info_perfil"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        />

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="180dp"
        android:layout_height="144dp"
        android:src="@drawable/image9"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/avatar_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12"
        />

    <Button
        android:id="@+id/change_image_button"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/cambiar_foto"
        android:background="@drawable/rounded_button_2"
        android:textAllCaps="false"
        android:textColor="#000011"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_view" />

    <TextView
        android:id="@+id/textViewName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/correo_ejemplo"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_image_button" />


    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:textColor="#333333"
        android:text="@string/dni_ejemplo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName2"
        />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button_2"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombre"
        android:paddingHorizontal="7dp"
        android:autofillHints="name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:paddingHorizontal="7dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_button_2"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button_2"
        android:backgroundTint="#F16333"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/actualizar"
        android:textAllCaps="false"
        android:textColor="#F9F9F9"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_2"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cerrar_sesion"
        android:textAllCaps="false"
        android:textColor="#F16333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>