<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8BABA"
    android:backgroundTint="#DFDCDC"
    tools:context=".InicioFragment">

    <TextView
        android:id="@+id/textView8"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/libre_baskerville_bold"
        android:text="Hola"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:visibility="visible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/encuentra_platos_fav"
        android:textColor="#757575"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />



    <TextView
        android:id="@+id/textView10"
        style="@style/Widget.AppCompat.TextView"
        android:fontFamily="@font/libre_baskerville_bold"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/categorias"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9"
        app:layout_constraintVertical_bias="0.201" />


    <ViewFlipper
        android:id="@+id/v_flipper"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/slider"
        android:backgroundTint="#FEFEFE"
        android:isScrollContainer="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10"
        app:layout_constraintVertical_bias="0.275"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/textView11"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/libre_baskerville_bold"
        android:text="@string/explora"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_flipper" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="341dp"
        android:layout_height="105dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_button_2"
        android:contentDescription="@string/boton_para_reservar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11"
        app:srcCompat="@drawable/reservar" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="341dp"
        android:layout_height="105dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button_2"
        android:contentDescription="@string/boton_para_busqueda"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton"
        app:layout_constraintVertical_bias="0.686"
        android:layout_marginStart="30dp"
        app:srcCompat="@drawable/cerca" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="344dp"
        android:layout_height="105dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button_2"
        android:contentDescription="@string/boton_para_contactos"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/imageButton3"
        app:layout_constraintVertical_bias="0.935"
        app:srcCompat="@drawable/contactanos" />

</androidx.constraintlayout.widget.ConstraintLayout>