<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#C8BABA"
    android:backgroundTint="#DFDCDC"
    tools:context=".ReservasFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_my_bookings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="@string/title"
            android:textColor="#040C22"
            android:textSize="34sp"
            tools:ignore="MissingConstraints"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/sub_my_reservations2"
            android:layout_width="362dp"
            android:layout_height="29dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/subtitle"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/reservation_list"
            android:layout_width="352dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/botonAgregarReserva"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/orange_round_button"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/btn_add_reservation"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/fondoDifuminado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>